--- a/src/main/resources/default.config
+++ b/src/main/resources/default.config
@@ -1,8 +1,8 @@
 testMode=true
-configMsg=true
-infoMsg=true
+configMsg=false
+infoMsg=false
 warningMsg=true
-debugMsg=true
+debugMsg=false
 dbms=mysql
 driver=com.mysql.cj.jdbc.Driver
 dbName=dict
