--- a/bin/main/default.config
+++ b/bin/main/default.config
@@ -1,8 +1,8 @@
 testMode=true
-configMsg=true
+configMsg=false
 infoMsg=true
 warningMsg=true
-debugMsg=true
+debugMsg=false
 dbms=mysql
 driver=com.mysql.cj.jdbc.Driver
 dbName=dict
