Tested updateWordAccess and updateWordModify methods, fix addWord with access and modify infos

--- a/src/main/resources/default.config
+++ b/src/main/resources/default.config
@@ -2,7 +2,7 @@ testMode=true
 configMsg=false
 infoMsg=true
 warningMsg=true
-debugMsg=false
+debugMsg=true
 dbms=mysql
 driver=com.mysql.cj.jdbc.Driver
 dbName=dict
