--- a/bin/main/default.config
+++ b/bin/main/default.config
@@ -2,7 +2,7 @@ testMode=true
 configMsg=false
 infoMsg=true
 warningMsg=true
-debugMsg=false
+debugMsg=true
 dbms=mysql
 driver=com.mysql.cj.jdbc.Driver
 dbName=dict
